Update .gitignore to ignore Xcode and macOS files

--- a/.gitignore
+++ b/.gitignore
@@ -1,36 +1,38 @@
-macOS,
-.DS_Store 
-.AppleDouble 
-.LSOverride Icon?
- .*
-Xcode,
-*.pbxuser 
-*.mode1v3 
-*.mode2v3 
-*.perspectivev3 xcuserdata/ 
-*.xcscmblueprint 
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon?
+
+# Xcode
+*.pbxuser
+*.mode1v3
+*.mode2v3
+*.perspectivev3
+xcuserdata/
+*.xcscmblueprint
 *.xccheckout
 
-Swift / iOS,
+# Swift / iOS
 build/
 DerivedData/
-*.xcuserstate 
+*.xcuserstate
 *.moved-aside
 
-Swift Package Manager,
-.build/ 
-.swiftpm/ 
+# Swift Package Manager
+.build/
+.swiftpm/
 Package.resolved
 
-CocoaPods,
+# CocoaPods
 Pods/
 
-Archives,
-*.zip 
-*.xcarchive 
+# Archives
+*.zip
+*.xcarchive
 *.dSYM
 
-Logs,
-*.log 
-*.tmp 
+# Logs
+*.log
+*.tmp
 *.swp
