Fix imageProfil & modifications des infos du user

--- a/TiMeFront/Info.plist
+++ b/TiMeFront/Info.plist
@@ -8,6 +8,8 @@
     </array>
     <key>NSAppTransportSecurity</key>
     <dict>
+        <key>NSAllowsLocalNetworking</key>
+        <true/>
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
