--- a/TiMeFront/Info.plist
+++ b/TiMeFront/Info.plist
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-    <key>UIAppFonts</key>
-    <array>
-        <string>Fonts/SF-Pro.ttf</string>
-    </array>
-    <key>NSAppTransportSecurity</key>
     <dict>
-        <key>NSAllowsLocalNetworking</key>
-        <true/>
-        <key>NSAllowsArbitraryLoads</key>
-        <true/>
+        <key>UIAppFonts</key>
+        <array>
+            <string>Fonts/SF-Pro.ttf</string>
+        </array>
+        <key>NSAppTransportSecurity</key>
+        <dict>
+            <key>NSAllowsLocalNetworking</key>
+            <true/>
+            <key>NSAllowsArbitraryLoads</key>
+            <true/>
+        </dict>
+        <key>NSLocalNetworkUsageDescription</key>
+        <string>TiMeFront a besoin d'accéder au réseau local pour se connecter au serveur de développement.</string>
     </dict>
-</dict>
 </plist>
