--- a/TiMeFront.xcodeproj/xcshareddata/xcschemes/TiMeFront.xcscheme
+++ b/TiMeFront.xcodeproj/xcshareddata/xcschemes/TiMeFront.xcscheme
@@ -29,6 +29,41 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6A6B97362EBCCFFC00CE78BC"
+               BuildableName = "DateFormatterTest.xctest"
+               BlueprintName = "DateFormatterTest"
+               ReferencedContainer = "container:TiMeFront.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6A6B97432EBCD08C00CE78BC"
+               BuildableName = "TiMeAppTest.xctest"
+               BlueprintName = "TiMeAppTest"
+               ReferencedContainer = "container:TiMeFront.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "6A6B97622EBCD32600CE78BC"
+               BuildableName = "TiMeTest.xctest"
+               BlueprintName = "TiMeTest"
+               ReferencedContainer = "container:TiMeFront.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
